--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,9 @@
 # When adding additional environment variables, the schema in "/src/env.mjs"
 # should be updated accordingly.
 
-# Prisma
+# Prisma #I am using tIDB for database
 # https://www.prisma.io/docs/reference/database-reference/connection-urls#env
+
+# mysql --comments --connect-timeout 15 -u '2TnG7umHC4b9AKP.root' -h gateway01.us-east-1.prod.aws.tidbcloud.com -P 4000 -D test --ssl-mode=VERIFY_IDENTITY --ssl-ca=/etc/ssl/cert.pem -pQXXwCaK3HmL3HiGs
+
 DATABASE_URL="file:./db.sqlite"
