--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
         run: npm install
 
       - name: Run TypeScript type checking
-        run: npm run type-check
+        run: npm run typecheck
 
       - name: Run linting
         run: npm run lint
